增加cms和G1垃圾回收器的详细内容